--- a/applicationView/index.html
+++ b/applicationView/index.html
@@ -10,7 +10,7 @@
   <h1>Minesweeper</h1>
   <form id = "board-def" style = "display: block" onsubmit="return onSubmit();">
     <p>Board Size: <input type = "number" id = "num_rows"/>  x <input type = "number" id = "num_cols"/></p>
-    <p><br>Number of mines: <input type = "number" id = "num_rows"/></p><br>
+    <p><br>Number of mines: <input type = "number" id = "num_mines"/></p><br>
     <input type = "submit" value = "Submit">
   </form>
   <br>
