added methods to post and get data

--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
   <form id = "board-def" style = "display: block" onsubmit="return onSubmit();">
     <p>Board Size: <input type = "number" id = "num_rows"/>  x <input type = "number" id = "num_cols"/></p>
     <p><br>Number of mines: <input type = "number" id = "num_mines"/></p><br>
-    <input type = "submit" value = "Submit">
+    <input type = "submit" value = "Submit"><br>
   </form>
-  <br>
   <div id = "board" ></div>
   <script src = "main.js"></script>
 </body>
